i18n: removed duplicate translation

--- a/locale/zh_CN/LC_MESSAGES/messages.po
+++ b/locale/zh_CN/LC_MESSAGES/messages.po
@@ -1366,7 +1366,7 @@ msgstr "删除记录"
 msgid "Delete record in zone"
 msgstr "删除区域中的记录"
 
-msgid "Delete Zones"
+msgid "Delete zones"
 msgstr "删除区域"
 
 msgid "Note"
