--- a/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/locale/fr_FR/LC_MESSAGES/messages.po
@@ -5,7 +5,7 @@
 # Emmanuel Seyman <eseyman@edd.fr>, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: poweradmin 2.1.5\n"
+"Project-Id-Version: Poweradmin\n"
 "Report-Msgid-Bugs-To: eseyman@edd.fr\n"
 "POT-Creation-Date: 2010-09-28 17:02+0200\n"
 "PO-Revision-Date: 2010-10-07 18:28+0200\n"
