fix(install): Correct spelling of accessible in installation guide

--- a/locale/en_EN/LC_MESSAGES/messages.po
+++ b/locale/en_EN/LC_MESSAGES/messages.po
@@ -806,7 +806,7 @@ msgstr "Go to step"
 
 #: install/index.php:69
 msgid ""
-"This installer expects you to have a PowerDNS database accessable from this "
+"This installer expects you to have a PowerDNS database accessible from this "
 "server. This installer also expects you to have never ran Poweradmin before,"
 " or that you want to overwrite the Poweradmin part of the database. If you "
 "have had Poweradmin running before, any data in the following tables will be"
@@ -815,7 +815,7 @@ msgid ""
 "database. However, it is recommended that you create a backup of your "
 "database before proceeding."
 msgstr ""
-"This installer expects you to have a PowerDNS database accessable from this "
+"This installer expects you to have a PowerDNS database accessible from this "
 "server. This installer also expects you to have never ran Poweradmin before,"
 " or that you want to overwrite the Poweradmin part of the database. If you "
 "have had Poweradmin running before, any data in the following tables will be"
