--- a/locale/nb_NO/LC_MESSAGES/messages.po
+++ b/locale/nb_NO/LC_MESSAGES/messages.po
@@ -810,7 +810,7 @@ msgstr "Gå til steg"
 
 #: install/index.php:69
 msgid ""
-"This installer expects you to have a PowerDNS database accessable from this "
+"This installer expects you to have a PowerDNS database accessible from this "
 "server. This installer also expects you to have never ran Poweradmin before,"
 " or that you want to overwrite the Poweradmin part of the database. If you "
 "have had Poweradmin running before, any data in the following tables will be"
