--- a/locale/en_EN/LC_MESSAGES/messages.po
+++ b/locale/en_EN/LC_MESSAGES/messages.po
@@ -1010,28 +1010,12 @@ msgid ""
 msgstr ""
 "After you have added the new user, proceed with this installation procedure."
 
-#: install/index.php:301
-msgid "The installer was able to write to the file"
-msgstr "The installer was able to write to the file"
-
-#: install/index.php:301
-msgid ""
-"A basic configuration, based on the details you have given, has been "
-"created."
-msgstr ""
-"A basic configuration, based on the details you have given, has been "
-"created."
-
-#: install/index.php:303
-msgid "The installer is unable to write to the file"
-msgstr "The installer is unable to write to the file"
-
 #: install/index.php:303
 msgid ""
-"(which is in itself good). The configuration is printed here. You should "
+"You should "
 "now create the file"
 msgstr ""
-"(which is in itself good). The configuration is printed here. You should "
+"You should "
 "now create the file"
 
 #: install/index.php:303
