--- a/locale/i18n-template-php.pot
+++ b/locale/i18n-template-php.pot
@@ -1707,22 +1707,9 @@ msgstr ""
 msgid "Create configuration file"
 msgstr ""
 
-#: install/templates/step6.html:4
-msgid "The installer was able to write to the file"
-msgstr ""
-
-#: install/templates/step6.html:5
-msgid ""
-"A basic configuration, based on the details you have given, has been created."
-msgstr ""
-
-#: install/templates/step6.html:7
-msgid "The installer is unable to write to the file"
-msgstr ""
-
 #: install/templates/step6.html:8
 msgid ""
-"(which is in itself good). The configuration is printed here. You should now "
+"You should now "
 "create the file"
 msgstr ""
 
