--- a/locale/ja_JP/LC_MESSAGES/messages.po
+++ b/locale/ja_JP/LC_MESSAGES/messages.po
@@ -976,25 +976,11 @@ msgid ""
 "After you have added the new user, proceed with this installation procedure."
 msgstr "新しいユーザーを追加した後で、このインストールプロセスを継続します。"
 
-#: install/index.php:301
-msgid "The installer was able to write to the file"
-msgstr "インストーラは、ファイル"
-
-#: install/index.php:301
-msgid ""
-"A basic configuration, based on the details you have given, has been "
-"created."
-msgstr "へ書き込みを行いました。指定された情報に基づいて基本設定を作成しました。"
-
-#: install/index.php:303
-msgid "The installer is unable to write to the file"
-msgstr "インストーラは、ファイル"
-
 #: install/index.php:303
 msgid ""
-"(which is in itself good). The configuration is printed here. You should "
+"You should "
 "now create the file"
-msgstr "に書き込みができません (書き込みができないこと自体は構いません)。設定内容を以下に表示しますので、ファイル"
+msgstr "設定内容を以下に表示しますので、ファイル"
 
 #: install/index.php:303
 msgid ""
