--- a/locale/ru_RU/LC_MESSAGES/messages.po
+++ b/locale/ru_RU/LC_MESSAGES/messages.po
@@ -686,17 +686,8 @@ msgstr "Вторичный сервер имён"
 msgid "When creating new zones using the template, this value will be used as secondary nameserver. Should be like \"ns2.example.net\"."
 msgstr "При создании новой зоны по шаблону, это значение будет подставлено как вторичный сервер имён. Пример: \"ns2.example.net\"."
 
-msgid "The installer was able to write to the file"
-msgstr "Программа инсталляции записала конфигурацию в файл"
-
-msgid "A basic configuration, based on the details you have given, has been created."
-msgstr "Базовая конфигурация, основанная на данных, которые вы ввели была создана."
-
-msgid "The installer is unable to write to the file"
-msgstr "Программа инсталляции не может произвести запись в файл"
-
-msgid "(which is in itself good). The configuration is printed here. You should now create the file"
-msgstr "(что само по себе хорошо). Листинг файла конфигурации приведен здесь. Вы должны создать файл"
+msgid "You should now create the file"
+msgstr "Вы должны создать файл"
 
 msgid "in the Poweradmin root directory yourself. It should contain the following few lines:"
 msgstr "в корневой директории Poweradmin самостоятельно. Он должен содержать следующие несколько строк:"
