--- a/locale/tr_TR/LC_MESSAGES/messages.po
+++ b/locale/tr_TR/LC_MESSAGES/messages.po
@@ -975,25 +975,11 @@ msgid ""
 "After you have added the new user, proceed with this installation procedure."
 msgstr "Bu kurulum işlemine yeni bir kullanıcı ekledikten sonra devam ediniz."
 
-#: install/index.php:301
-msgid "The installer was able to write to the file"
-msgstr "Kurulum, dosyasına yazım yapmaya muktedir."
-
-#: install/index.php:301
-msgid ""
-"A basic configuration, based on the details you have given, has been "
-"created."
-msgstr "Verdiğiniz detaylar esasında basit bir yapılandırma oluşturuldu."
-
-#: install/index.php:303
-msgid "The installer is unable to write to the file"
-msgstr "Kurulum, dosyasına yazım yapmaya muktedir."
-
 #: install/index.php:303
 msgid ""
-"(which is in itself good). The configuration is printed here. You should "
+"You should "
 "now create the file"
-msgstr "(varolan haliyle güzel). Yapılandırma buraya yazıldı. Şimdi dosyayı yaratmalısınız."
+msgstr "Şimdi dosyayı yaratmalısınız."
 
 #: install/index.php:303
 msgid ""
