--- a/locale/ja_JP/LC_MESSAGES/messages.po
+++ b/locale/ja_JP/LC_MESSAGES/messages.po
@@ -933,8 +933,8 @@ msgstr "ホストマスター"
 #: install/index.php:184
 msgid ""
 "When creating SOA records and no hostmaster is provided, this value here "
-"will be used. Should be in the form \"hostmaster.example.net\"."
-msgstr "SOA レコードを作成する際に hostmaster を設定しなければ、この値が使用されます。\"hostmaster.example.net\" といった形式でなくてはなりません。"
+"will be used."
+msgstr "SOA レコードを作成する際に hostmaster を設定しなければ、この値が使用されます。"
 
 #: install/index.php:187
 msgid "Primary nameserver"
@@ -943,8 +943,8 @@ msgstr "プライマリ・ネームサーバー"
 #: install/index.php:189
 msgid ""
 "When creating new zones using the template, this value will be used as "
-"primary nameserver. Should be like \"ns1.example.net\"."
-msgstr "テンプレートを使用して新しくゾーンを作成する際に、この値がプライマリネームサーバとして使用されます。\"ns1.example.net\" のように指定して下さい。"
+"primary nameserver."
+msgstr "テンプレートを使用して新しくゾーンを作成する際に、この値がプライマリネームサーバとして使用されます。"
 
 #: install/index.php:192
 msgid "Secondary nameserver"
@@ -953,8 +953,8 @@ msgstr "セカンダリ・ネームサーバー"
 #: install/index.php:194
 msgid ""
 "When creating new zones using the template, this value will be used as "
-"secondary nameserver. Should be like \"ns2.example.net\"."
-msgstr "テンプレートを使用して新しくゾーンを作成する際に、この値がセカンダリネームサーバとして使用されます。\"ns2.example.net\" のように指定して下さい。"
+"secondary nameserver."
+msgstr "テンプレートを使用して新しくゾーンを作成する際に、この値がセカンダリネームサーバとして使用されます。"
 
 #: install/index.php:230
 msgid ""
