--- a/locale/nb_NO/LC_MESSAGES/messages.po
+++ b/locale/nb_NO/LC_MESSAGES/messages.po
@@ -932,8 +932,8 @@ msgstr "Hostmaster"
 #: install/index.php:184
 msgid ""
 "When creating SOA records and no hostmaster is provided, this value here "
-"will be used. Should be in the form \"hostmaster.example.net\"."
-msgstr "Når du lager SOA pekere og hostmaster ikke er oppgitt, brukes denne verdien istedenfor. Må være i formatet \"hostmaster.eksempel.net\"."
+"will be used."
+msgstr "Når du lager SOA pekere og hostmaster ikke er oppgitt, brukes denne verdien istedenfor."
 
 #: install/index.php:187
 msgid "Primary nameserver"
@@ -942,7 +942,7 @@ msgstr "Primær navnetjener"
 #: install/index.php:189
 msgid ""
 "When creating new zones using the template, this value will be used as "
-"primary nameserver. Should be like \"ns1.example.net\"."
+"primary nameserver."
 msgstr "Når du lager nye soner med denne malen brukes informasjonen i dette feltet som primær navnetjener. For eksempel \"ns1.eksempel.net\"."
 
 #: install/index.php:192
@@ -952,8 +952,8 @@ msgstr "Sekundær navnetjener"
 #: install/index.php:194
 msgid ""
 "When creating new zones using the template, this value will be used as "
-"secondary nameserver. Should be like \"ns2.example.net\"."
-msgstr "Når du lager nye soner med denne malen brukes informasjonen i dette feltet som sekundær navnetjener. For eksempel \"ns2.eksempel.net\"."
+"secondary nameserver."
+msgstr "Når du lager nye soner med denne malen brukes informasjonen i dette feltet som sekundær navnetjener."
 
 #: install/index.php:230
 msgid ""
