--- a/locale/tr_TR/LC_MESSAGES/messages.po
+++ b/locale/tr_TR/LC_MESSAGES/messages.po
@@ -932,8 +932,8 @@ msgstr "Host kurucu"
 #: install/index.php:184
 msgid ""
 "When creating SOA records and no hostmaster is provided, this value here "
-"will be used. Should be in the form \"hostmaster.example.net\"."
-msgstr "SOA kaydı oluşturulurken host kurucu belirtilmediyse buradaki değer kullanılacaktır. \"hostmaster.example.net\" biçiminde olmalıdır."
+"will be used."
+msgstr "SOA kaydı oluşturulurken host kurucu belirtilmediyse buradaki değer kullanılacaktır."
 
 #: install/index.php:187
 msgid "Primary nameserver"
@@ -942,8 +942,8 @@ msgstr "Birincil ad sunucusu"
 #: install/index.php:189
 msgid ""
 "When creating new zones using the template, this value will be used as "
-"primary nameserver. Should be like \"ns1.example.net\"."
-msgstr "Şablon kullanarak yeni bölge oluştururken bu değer birincil ad sunucusu olarak kullanılacak. \"ns1.example.net\" benzeri olmalı."
+"primary nameserver."
+msgstr "Şablon kullanarak yeni bölge oluştururken bu değer birincil ad sunucusu olarak kullanılacak."
 
 #: install/index.php:192
 msgid "Secondary nameserver"
@@ -952,8 +952,8 @@ msgstr "İkincil ad sunucusu"
 #: install/index.php:194
 msgid ""
 "When creating new zones using the template, this value will be used as "
-"secondary nameserver. Should be like \"ns2.example.net\"."
-msgstr "Şablon kullanarak yeni bölge oluştururken bu değer ikincil ad sunucusu olarak kullanılacak. \"ns2.example.net\" benzeri olmalı."
+"secondary nameserver."
+msgstr "Şablon kullanarak yeni bölge oluştururken bu değer ikincil ad sunucusu olarak kullanılacak."
 
 #: install/index.php:230
 msgid ""
